# multi_sensor_fusion

./: .gitignore
kitti_test/: display_bag.rviz
lidar_localization/: .gitignore  .~块增删的效果.docx  CMakeLists.txt
lidar_localization/cmake/: ceres.cmake  g2o.cmake  global_definition.cmake  opencv.cmake
lidar_localization/config/front_end/: config.yaml
lidar_localization/include/lidar_localization/calibration/: lidar_gnss_cal.h
lidar_localization/include/lidar_localization/ceres_tutorial/: curve_fitting.hpp  pose_estimation_3d2d.hpp  powell_function.hpp  powell_function2.hpp  rosenbrock_function.hpp
lidar_localization/include/lidar_localization/ceres_tutorial/slam/common/: read_g2o.h  slam_type.hpp
lidar_localization/include/lidar_localization/ceres_tutorial/slam/data/: 2d_poses_optimized.txt  3d_poses_optimized.txt  3d_poses_original.txt  README.md
lidar_localization/include/lidar_localization/ceres_tutorial/slam/pose_graph_2d/: slam_2d.hpp
lidar_localization/include/lidar_localization/front_end/: front_end.hpp  front_end_flow.hpp
lidar_localization/include/lidar_localization/g2o_tutorial/: curve_fitting_g2o.hpp
lidar_localization/include/lidar_localization/global_definition/: global_definition.h.in
lidar_localization/include/lidar_localization/models/registration/: ceres_icp_registration.hpp  ceres_qt_icp_registration.hpp  ceres_se3_icp_registration.hpp  icp_registration.hpp  ndt_cpu_registration.hpp  opt_icp_registration.hpp
lidar_localization/include/lidar_localization/sensor_data/: cloud_data.hpp  pose_data.hpp
lidar_localization/include/lidar_localization/tools/: pose_manager.hpp  tic_toc.hpp
lidar_localization/launch/: ceres_learning.launch  front_end.launch
lidar_localization/papers/gnss-lidar-calibration/: A Robust Extrinsic Calibration Framework
lidar_localization/src/: ceres_learning_node.cpp  front_end_node.cpp  g2o_learning_node.cpp  lidar_gnss_cal_node.cpp  save_pose_node.cpp  test_frame_node.cpp
lidar_localization/src/calibration/: lidar_gnss_cal.cpp
lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/models/registration/: icp_registration.cpp  ndt_cpu_registration.cpp  ndt_registration.cpp
lidar_localization/src/sensor_data/: gnss_data.cpp  imu_data.cpp  pose_data.cpp
lidar_localization/src/tf_listener/: tf_lisener.cpp
lidar_localization/src/tools/: file_manager.cpp
lidar_localization/traj/: ground_truth.txt  ground_truth_tum.txt  laser_odom.txt  laser_odom_tum.txt
ndt_cpu/: CMakeLists.txt
(+12 files in other folders)
